--- a/P002973.opf/meta.yml
+++ b/P002973.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P002973
+id: P002973
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG23520
   title: རི་མོའི་འཇུག་སྒོ།
-  volume: ''
   author: ''
+  volumes: {}
