--- a/P002973.opf/meta.yml
+++ b/P002973.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG23520
   title: རི་མོའི་འཇུག་སྒོ།
   author: ''
-  volumes: {}
+  volumes:
+    99347d8720444a95a7b1e62227721958:
+      image_group_id: I1KG23573
+      title: ''
+      volume_number: 1
+      total_pages: 154
