--- a/P002973.opf/layers/v001/Pagination.yml
+++ b/P002973.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9b3fc35a5ca54bb0b58a5a4bad013c52
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1efaed8a8e91482ab07c30a9a7f5d0e3:
